kubernetes/overlays/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: statesman

spec:
    replicas: 2
