kubernetes/overlays/dev/destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
  name: statesman

spec:
  host: store-v1.statesman.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
